fix: sp menu gap

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -492,10 +492,11 @@ a.footer__link {
     display: flex;
     flex-direction: column;
     font-size: 25px;
-    justify-content: space-around;
+    justify-content: center;
     width: 100%;
-    padding: 20% 10%;
+    padding: 10%;
     height: 100%;
+    gap: 64px;
   }
 
   .header__menu-button {
